--- a/WebAppService/Areas/Admin/Views/FAQS/FAQS.cshtml
+++ b/WebAppService/Areas/Admin/Views/FAQS/FAQS.cshtml
@@ -66,7 +66,7 @@
                             <label class="form-label">Câu hỏi</label>
                             <input type="text" id="CauHoi" class="form-control">
                         </div>
-                        <div class="mb-3"></div>
+                        <div class="mb-3">
                             <label class="form-label">Câu trả lời</label>
                             <textarea type="text" id="CauTraLoi" class="form-control" placeholder="Nhập câu trả lời ..." rows="3"></textarea>
                         </div>
